# wms

./: README.md
gowms/: README.md  go.mod  go.sum  main.go  testing.db
gowms/data/: aisle.go  category.go  config.go  connection.go  product.go  shelf.go  unit.go  util.go  vendor.go  warehouse.go
gowms/data/scripts/: schema.sql
gowms/routes/: auth.go  controller.go  forms.go  handlers.go  pages.go  router.go  routes_ticket.txt
gowms/templates/: index.html  inventory.html  login.html  products.html
gowms/tickets/: 12-13-2023.txt
pywms/: pyproject.toml
pywms/src/pywms/: __init__.py  pywms.db
pywms/src/pywms/routes/: __init__.py
pywms/src/pywms/templates/: createpost.html  posts.html
