[tool.poetry]
name = "pywms"
version = "0.1.0"
description = ""
authors = ["SmokierLemur51 <ldl6147@gmail.com>"]
readme = "README.md"
packages = [{include = "pywms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "pywms:run"
init_db = "pywms:init_db"